--- a/index.css
+++ b/index.css
@@ -32,7 +32,8 @@ form {
   margin: 0rem 1rem;
   border-radius: 10px;
   background-color: hsl(0, 0%, 100%);
-  font-size: 10px;
+  width: 340px;
+  font-size: 14px;
 }
 h1 {
   margin-bottom: 12px;
@@ -44,9 +45,10 @@ label {
 input {
   margin-bottom: 12px;
   outline: none;
-  height: 20px;
+  height: 36px;
   border: 1px solid hsl(0, 0%, 83%);
   border-radius: 4px;
+  padding: 0 12px;
 }
 .message {
   display: flex;
@@ -57,6 +59,7 @@ input {
   margin-bottom: 12px;
   outline: none;
   border: 1px solid hsl(0, 0%, 83%);
+  padding: 12px;
 }
 .query-type {
   padding: 0 6px;
@@ -80,7 +83,6 @@ input {
 .checkbox-cont {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 12px;
 }
